name:                limp-ortools
version:             0.0.0.0
synopsis:            limp interface for or-tools
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Takano Akio
maintainer:          aljee@hyper.cx
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Limp.Solvers.OrTools.Solve
                       Numeric.Limp.Solvers.OrTools
                       Numeric.Limp.Solvers.OrTools.Types
  other-modules:       Numeric.Limp.Solvers.OrTools.Program
                       Numeric.Limp.Solvers.OrTools.FFI
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0, containers, limp, vector
  cc-options:          -std=c++11 -Wno-deprecated
                        -- -Wno-deprecated to suppress warnings from or-tools
                        -- headers
  extra-libraries:     ortools stdc++
  hs-source-dirs:      .
  c-sources:           c++bits/hs_or_tools.cxx
  default-language:    Haskell2010

test-suite foo
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             ortools-lp-sample.hs
  build-depends:       base, HUnit, test-framework, test-framework-hunit, limp,
                       limp-ortools, containers
